#8 Add third example to document, fix argparse spacing, update data
This commit does several things.

This makes the CLI look nicer by adding the correct amount of spacing so that the help options are more readable.

This adds a third example to describe what the desired product is in our documentation.

This fixes a bunch of CSS issues with scroll bars showing up where they are not needed.

--- a/front_end/index.css
+++ b/front_end/index.css
@@ -13,7 +13,8 @@ main a {
     font-size: 1.5em;
     white-space: nowrap;
     scroll-direction: horizontal;
-    overflow: scroll;
+    overflow-x: auto;
+    overflow-y: hidden;
     padding: 15px 15px 15px 15px;
 }
 
@@ -25,7 +26,6 @@ main a {
 }
 
 pre code {
-    overflow: hidden;
     background-color: #eee;
     border: 1px solid #999;
     font-size: 15px;
@@ -33,7 +33,8 @@ pre code {
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 7%;
-    overflow: scroll;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 .common-body-text, #introduction li {
@@ -171,6 +172,10 @@ body {
     padding: 5px 5px 5px 5px;
     text-align: left;
     font-size: 0.5em;
+}
+
+#contraction-table code {
+    overflow: hidden;
 }
 
 #contraction-table table {
